syntax ="proto3";

service TeamService {
    rpc GetAllTeams() returns (TeamList);
    rpc GetTeamById(TeamId) returns (Team);
    rpc CreateTeam(Team) returns (Team);
    rpc UpdateTeam(Team) returns (Team);
    rpc DeleteTeam(TeamId) returns (Team);
    rpc AddStudentToTeam(TeamId, StudentId) returns (Empty);
    rpc RemoveStudentFromTeam(TeamId, StudentId) returns (Empty);
}

message Empty {}

message Team {
    string id = 1;
    string name = 2;
    string profile = 3;
}

message TeamList {
    repeated Team teams = 1;
}

message StudentId {
    string id = 1;
}

message TeamId {
    string id = 1;
}

